# water

./: CMakeLists.txt  DEPENDENCIES.txt
docs/: physics.md
include/glad/: glad.h
src/cpu/: main.cpp
src/cpu/arithmetic/: Numbers.cpp  Numbers.h
src/cpu/model/: WaterModel.h  WaterMolecule.cpp
src/render/: glad.c  render.cpp  render.h
